# kitten_torch

./: .gitignore  README.md  gen_ab_test.py  gen_blind_test.py  generate_audio.py  pyproject.toml  score_ab_test.py  score_blind_test.py
kitten_torch/: __init__.py  config.py  load_weights.py  model.py  phoneme_vocab.json  tokenizer.py  weight_loader.py
kitten_torch/modules/: __init__.py  bert.py  decoder.py  generator.py  predictor.py  text_encoder.py
research/: debug_amplitude.py  debug_conv_post.py  debug_dec_intermediates.py  debug_decode3.py  debug_fullpipe.py  debug_gen_mini.py  debug_gen_stages.py  debug_llinear.py  debug_main_path.py  debug_noise_convs.py  debug_noise_path.py  debug_noise_path2.py  debug_onnx_decoder.py  debug_onnx_gen.py  debug_onnx_intermediate.py  debug_onnx_mid.py  debug_onnx_slice.py  debug_onnx_stft.py  debug_pred_names.py  debug_pred_style.py  debug_pred_style2.py  debug_sine_gen.py  debug_sine_gen2.py  debug_sine_stft.py  debug_snake.py  debug_stage2.py  debug_stft_fix.py  debug_stft_order.py  debug_stft_weights.py  debug_weights.py  generate_og.py  probe_decoder.py  probe_gen2.py  probe_generator.py  probe_inject.py  probe_mrf.py  probe_resblock.py  probe_resblock2.py  probe_snake.py
